Allow Enum types in Messages, fix cast of Message to Enum (#10279)